--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -32,8 +32,8 @@
   </div>
 
   <div>
-    <%= form.label :bialling_account_id, style: "display: block" %>
-    <%= form.text_field :bialling_account_id %>
+    <%= form.label :billing_account_id, style: "display: block" %>
+    <%= form.text_field :billing_account_id %>
   </div>
 
   <div>
