--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -20,8 +20,8 @@
   </p>
 
   <p>
-    <strong>Bialling account:</strong>
-    <%= project.bialling_account_id %>
+    <strong>Billing account:</strong>
+    <%= project.billing_account_id %>
   </p>
 
   <p>
