some bug into getting child of a folder

--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -12,6 +12,9 @@
   <p>
     <strong>Is org:</strong>
     <%= folder.is_org %>
+    <% if folder.is_org %>
+      Org view: <%= render_org(folder) %>
+    <% end %>
   </p>
 
   <p>
