I presume Ive fixed it

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -42,6 +42,21 @@
   </div>
 
   <div>
+    <%= form.label :lifecycle_state, style: "display: block" %>
+    <%= form.text_field :lifecycle_state %>
+  </div>
+
+  <div>
+    <%= form.label :project_name, style: "display: block" %>
+    <%= form.text_field :project_name %>
+  </div>
+
+  <div>
+    <%= form.label :project_creation_time, style: "display: block" %>
+    <%= form.datetime_field :project_creation_time %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
