--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,11 +1,13 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Projects (<%= @projects.count %>)</h1>
+<h1>Projects</h1>
 
 <div id="projects">
   <% @projects.each do |project| %>
-    <%= render_project project %><br/>
-    <%#jj <p> < %= link_to "Show this project", project % > </p> %>
+    <%= render project %>
+    <p>
+      <%= link_to "Show this project", project %>
+    </p>
   <% end %>
 </div>
 
