--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -29,4 +29,19 @@
     <%= project.description %>
   </p>
 
+  <p>
+    <strong>Lifecycle state:</strong>
+    <%= project.lifecycle_state %>
+  </p>
+
+  <p>
+    <strong>Project name:</strong>
+    <%= project.project_name %>
+  </p>
+
+  <p>
+    <strong>Project creation time:</strong>
+    <%= project.project_creation_time %>
+  </p>
+
 </div>
