--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Projects</h1>
+<%= render 'projects/index_addon' %>
+
+<h1>Projects List</h1>
 
 <div id="projects">
   <% @projects.each do |project| %>
