--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -34,4 +34,14 @@
     <%= folder.directory_customer_id %>
   </p>
 
+  <p>
+    <strong>Lifecycle state:</strong>
+    <%= folder.lifecycle_state %>
+  </p>
+
+  <p>
+    <strong>Gcp creation time:</strong>
+    <%= folder.gcp_creation_time %>
+  </p>
+
 </div>
