--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,5 +1,14 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render 'folders/index_addon' %>
+<h1>Folders</h1>
 
-<%= link_to "+ New folder", new_folder_path %>
+<div id="folders">
+  <% @folders.each do |folder| %>
+    <%= render folder %>
+    <p>
+      <%= link_to "Show this folder", folder %>
+    </p>
+  <% end %>
+</div>
+
+<%= link_to "New folder", new_folder_path %>
