--- a/app/views/folders/index.html.erb
+++ b/app/views/folders/index.html.erb
@@ -1,14 +1,3 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Folders</h1>
-
-<div id="folders">
-  <% @folders.each do |folder| %>
-    <%= render folder %>
-    <p>
-      <%= link_to "Show this folder", folder %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New folder", new_folder_path %>
+<%= render 'folders/index_addon' %>
