--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/orgs">🗂️ Orgs</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/labels">🏷️️ Labels</a>
+          </li>
         </ul>
       </div>
     </div>
