--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -57,6 +57,11 @@
   </div>
 
   <div>
+    <%= form.label :type, style: "display: block" %>
+    <%= form.text_field :type %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
