finally parsing orgs, folders, prohects from gcloud works. We just miss recursing through folders

--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -45,8 +45,8 @@
   </p>
 
   <p>
-    <strong>Type:</strong>
-    <%= folder.type %>
+    <strong>Frog type:</strong>
+    <%= folder.frog_type %>
   </p>
 
 </div>
