--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -57,8 +57,8 @@
   </div>
 
   <div>
-    <%= form.label :type, style: "display: block" %>
-    <%= form.text_field :type %>
+    <%= form.label :frog_type, style: "display: block" %>
+    <%= form.text_field :frog_type %>
   </div>
 
   <div>
