--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/labels">🏷️️ Labels</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/inventory_items"><%= INVENTORY_ITEM_ICON %> Inventory Items</a>
+          </li>
         </ul>
       </div>
     </div>
