--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,6 +33,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items"><%= INVENTORY_ITEM_ICON %> Inventory Items</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/inventory_items/stats">📈 Inventory Stats</a>
+          </li>
+          
         </ul>
       </div>
     </div>
