some refactoring. need to add project to AI item

--- a/app/views/inventory_items/_index_addon.html.erb
+++ b/app/views/inventory_items/_index_addon.html.erb
@@ -21,7 +21,7 @@ ago</b>)
         <th>Name
         <th>Ancestors
         <th>Organization
-  <% @inventory_items.each do |x| %>
+  <% @inventory_items.limit(100).each do |x| %>
     <tr>
         <td><%= x.simplified_type %>
         <td><%= link_to x.simplified_name, x %>
