added project string to II

--- a/app/views/inventory_items/_form.html.erb
+++ b/app/views/inventory_items/_form.html.erb
@@ -52,6 +52,11 @@
   </div>
 
   <div>
+    <%= form.label :project, style: "display: block" %>
+    <%= form.text_field :project %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
