--- a/app/views/inventory_items/_inventory_item.html.erb
+++ b/app/views/inventory_items/_inventory_item.html.erb
@@ -39,4 +39,9 @@
     <%= inventory_item.resource_parent %>
   </p>
 
+  <p>
+    <strong>Project:</strong>
+    <%= inventory_item.project %>
+  </p>
+
 </div>
