--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -1,12 +1,22 @@
 <div id="<%= dom_id label %>">
   <p>
-    <strong>Gcp key:</strong>
-    <%= label.gcp_key %>
+    <strong>Gcp k:</strong>
+    <%= label.gcp_k %>
   </p>
 
   <p>
-    <strong>Gcp value:</strong>
-    <%= label.gcp_value %>
+    <strong>Gcp val:</strong>
+    <%= label.gcp_val %>
+  </p>
+
+  <p>
+    <strong>Labellable:</strong>
+    <%= label.labellable_id %>
+  </p>
+
+  <p>
+    <strong>Labellable type:</strong>
+    <%= label.labellable_type %>
   </p>
 
 </div>
