labels fixed. now i need to import them

--- a/app/views/labels/_index_addon.html.erb
+++ b/app/views/labels/_index_addon.html.erb
@@ -7,7 +7,7 @@ There's another theory which states that this has already happened 😉
 <table border='1' >
   <% @labels.each do |label| %>
     <tr>
-        <td><%= label.gcp_key %>:
-        <td><%= label.gcp_value %>
+        <td><%= label.gcp_k %>:
+        <td><%= label.gcp_val %>
     <% end %>
 </table>
