--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,9 +2,12 @@
 
 <%= render @project %>
 
+<%= render 'projects/show_addon_labels' %>
+
 <div>
   <%= link_to "Edit this project", edit_project_path(@project) %> |
   <%= link_to "Back to projects", projects_path %>
 
   <%= button_to "Destroy this project", @project, method: :delete %>
 </div>
+
