--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -1,5 +1,9 @@
 <div id="<%= dom_id label %>">
   <p>
+    <strong>id k:</strong>
+    <%= label.id %>
+  </p>
+  <p>
     <strong>Gcp k:</strong>
     <%= label.gcp_k %>
   </p>
