--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @folder %>
+<%= render 'folders/show_addon' %>
 
 <div>
   <%= link_to "Edit this folder", edit_folder_path(@folder) %> |
