--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,22 @@
-<footer>
-  <!-- Jumbotron -->
-  <div class="p-5 text-center bg-light">
-    <h1 class="mb-3"><%= APP_NAME %></h1>
-    <h4 class="mb-3"><%= APP_DESCRIPTION %></h4>
-    <a class="btn btn-primary" href="<%= CODE_URL %>" role="button">Get the Code</a>
-  </div>
-  <!-- Jumbotron -->
+<footer class="mastfoot mt-auto text-center">
+  <hr class="my-4">
+   <div class="inner">
+     <p>
+         <b><%= APP_NAME %></b>
+         v<b><%= APP_VERSION %></b>
+          @<%= HOSTNAME %>
+      </p>
+    </div>
 </footer>
+
+  <!-- Jumbotron v5.0, docs for v4: https://getbootstrap.com/docs/4.0/components/jumbotron/
+  <div class="p-5 text-center bg-warning">
+     <footer class="mastfoot mt-auto">
+    <hr class="my-4">
+      <b><%= APP_NAME %></b>
+      v<b><%= APP_VERSION %></b>
+      @<%= HOSTNAME %>
+  </div>
+  < ! - - Jumbotron - - >
+< / footer >
+ -->
