--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,10 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <%= image_tag 'logo.png', width: "30", height: "30", class: "d-inline-block align-top", alt: 'GCP cache' %>
+        GCP Cache
+        </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -16,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item active">
-            <a class="nav-link" aria-current="page" href="#">🏠 Home</a>
+            <a class="nav-link" aria-current="page" href="/">🏠 Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/projects">🍕 Projects </a>
@@ -36,7 +40,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items/stats">📈 Inventory Stats</a>
           </li>
-          
+
         </ul>
       </div>
     </div>
