--- a/app/views/orgs/index.html.erb
+++ b/app/views/orgs/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>🗂️ Organizations</h1>
+<h1>🗂️ <%=@folders.count%> Organizations</h1>
 
 
 <div id="folders">
