--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -1,4 +1,5 @@
 <h1>🏠 Welcome to <%= APP_NAME_SHORT %></h1>
+
  <div class="p-5 text-center bg-light">
     <h1 class="mb-3"><%= APP_NAME %></h1>
     <h4 class="mb-3"><%= APP_DESCRIPTION %></h4>
@@ -6,8 +7,10 @@
     <a class="btn btn-secondary" href="/orgs" role="button">See your Orgs</a>
   </div>
 
+<img src="https://raw.githubusercontent.com/palladius/gcp-cache/main/app/assets/images/PalladiusPacans_a_very_intertwined_network_of_pizza_slices_fold_014a6801-a8d0-4122-a8f9-4aa778cb089c.png" style="float:right;width:300px;height:300px;" />
 
 <h2>📈 Some Stats</h2>
+
 
 <h4>🛢 DB Entities</h4>
 
@@ -20,5 +23,6 @@
 <h4>🚂 Rails config</h4>
 
 DB Type: <b><%=  ActiveRecord::Base.connection.adapter_name %></b><br/>
-ENV:<b> <%= Rails.env %></b><br/>
-
+ENV: <b><%= Rails.env %></b><br/>
+PROJECT_ID:<b><%= ENV.fetch 'PROJECT_ID', :boh %></b><br/>
+DATABASE_URL:<b><%= ENV.fetch 'DATABASE_URL', :boh %></b> (risky! Removeme when it works)<br/>
