--- a/app/views/orgs/index.html.erb
+++ b/app/views/orgs/index.html.erb
@@ -2,7 +2,6 @@
 
 <h1>🗂️ <%=@folders.count%> Organizations</h1>
 
-
 <div id="folders">
   <table class="table" >
     <thead class="thead-light" >
@@ -16,3 +15,5 @@
 
   </table>
 </div>
+
+Note that VALID icon is a very expensive operation: it it ONE SQL query per line :/
