--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,7 +35,7 @@
             <a class="nav-link" href="/labels">🏷️️ Labels</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/billing_accounts">🤑 $ 💲 ＄ 💵 💰️  BAIDs</a>
+            <a class="nav-link" href="/billing_accounts">🤑 BAIDs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items"><%= INVENTORY_ITEM_ICON %> Inventory Items</a>
