--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -61,6 +61,12 @@
     <%= form.text_field :frog_type %>
   </div>
 
+
+    <div>
+    <%= form.label :active, style: "display: block" %>
+    <%= form.check_box :active %>
+  </div>
+
   <div>
     <%= form.submit %>
   </div>
