awesome DB emojified

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,6 +5,7 @@
          <b><%= APP_NAME %></b>
          v<b><%= APP_VERSION %></b>
           @<%= HOSTNAME %>
+          :: <%= render_db_with_emoji() %>
       </p>
     </div>
 </footer>
