--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,13 +37,14 @@
           <li class="nav-item">
             <a class="nav-link" href="/billing_accounts">🤑 BAIDs</a>
           </li>
+<% if ENV_ENABLE_EXPERIMENTAL_FEATURES %>
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items"><%= INVENTORY_ITEM_ICON %> Inventory Items</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items/stats">📈 Inventory Stats</a>
           </li>
-
+<% end %>
         </ul>
       </div>
     </div>
