--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -1,7 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
+<%
+  @sub_projects = @folder.sub_projects # Project.where(organization_id: @folder.folder_id)
+  @sub_folders = @folder.sub_folders # where(parent_id: @folder.folder_id.to_s)
+%>
+<h1><%= @folder.to_s %></h1>
 <%= render @folder %>
-<%= render 'folders/show_addon' %>
 
 <div>
   <%= link_to "Edit this folder", edit_folder_path(@folder) %> |
@@ -9,3 +12,28 @@
 
   <%= button_to "Destroy this folder", @folder, method: :delete %>
 </div>
+
+<h1> <%= Folder.emoji%> Folder addon 2023 for <%= @folder.to_s(false) %></h1>
+
+Let's explore projects and folders having this folder/org as a parent:
+
+<h2>Parent</h2>
+
+- <%= @folder.parent ? link_to( @folder.parent, @folder.parent ) : (@folder.is_org ? 'none found (of course, Im (g)root!)' : 'Weird. My explaination is that you found this folder in random way so it wasnt aware of its parenthood')  %> <br/>
+
+<h2>Sub-Projects </h2>
+
+Let's try to enumerate all projects with this parent or org:  <%= @folder.folder_id %><br/>
+
+<% @sub_projects.each do |project| %>
+  - <%= render_project(project) %><br/>
+<% end %>
+
+<h2><%= @sub_folders.count %> Sub-Folders</h2>
+
+Let's try to enumerate all folder with this parent or org:  <%= @folder.folder_id %><br/>
+
+<% @sub_folders.each do |folder| %>
+  - <%= render_folder(folder) %><br/>
+<% end %>
+
