--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -3,8 +3,8 @@
  <div class="p-5 text-center bg-light">
     <h1 class="mb-3"><%= APP_NAME %></h1>
     <h4 class="mb-3"><%= APP_DESCRIPTION %></h4>
-    <a class="btn btn-primary" href="<%= CODE_URL %>" role="button">Get the Code</a>
-    <a class="btn btn-secondary" href="/orgs" role="button">See your Orgs</a>
+    <a class="btn btn-primary" href="<%= CODE_URL %>" role="button">Get the Code on 🐙</a>
+    <a class="btn btn-secondary" href="/orgs" role="button">See your <%=@orgs.count%> Orgs</a>
   </div>
 
 <img src="https://raw.githubusercontent.com/palladius/gcp-cache/main/app/assets/images/PalladiusPacans_a_very_intertwined_network_of_pizza_slices_fold_014a6801-a8d0-4122-a8f9-4aa778cb089c.png" style="float:right;width:300px;height:300px;" />
