--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,6 +37,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/billing_accounts">🤑 BAIDs</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/vms">🚙 VMs </a>
+          </li>
+
 <% if ENV_ENABLE_EXPERIMENTAL_FEATURES %>
           <li class="nav-item">
             <a class="nav-link" href="/inventory_items"><%= INVENTORY_ITEM_ICON %> Inventory Items</a>
