--- a/app/views/vms/_form.html.erb
+++ b/app/views/vms/_form.html.erb
@@ -72,6 +72,11 @@
   </div>
 
   <div>
+    <%= form.label :project_id, style: "display: block" %>
+    <%= form.text_field :project_id %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
