--- a/app/views/vms/index.html.erb
+++ b/app/views/vms/index.html.erb
@@ -1,14 +1,4 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Vms</h1>
+<%= render 'vms/index_addon' %>
 
-<div id="vms">
-  <% @vms.each do |vm| %>
-    <%= render vm %>
-    <p>
-      <%= link_to "Show this vm", vm %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New vm", new_vm_path %>
