--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,12 @@
             <a class="nav-link" href="/labels">🏷️️ Labels</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/inventory_items">🧽 Inv Items</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/services">🔺 Services</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/billing_accounts">🤑 BAIDs</a>
           </li>
           <li class="nav-item">
