--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -27,13 +27,18 @@ Un po' di notule
 #labels: <b><%=@labels.count rescue $! %></b><br/>
 #inventory_items: <b><%=@inventory_items.count%></b><br/>
 #BAIDs: <b><%=@billing_accounts_count %></b><br/>
+#Services: TODO
 
 <h4>🚂 Rails config</h4>
 
 DB Type: <b><%=  ActiveRecord::Base.connection.adapter_name %></b><br/>
 ENV: <b><%= Rails.env %></b><br/>
 PROJECT_ID:<b><%= ENV.fetch 'PROJECT_ID', :boh %></b><br/>
-DATABASE_URL:<b>HIDDEN<%#= ENV.fetch 'DATABASE_URL', :boh %></b> (risky! Removeme when it works)<br/>
+DATABASE_URL:<b>HIDDEN<%#= ENV.fetch 'DATABASE_URL', :do_not_show %></b> (risky! Removeme when it works)<br/>
+DB :<b><%= Rails.configuration.database_configuration[Rails.env]["database"]  %></b> (risky! Removeme when it works)<br/>
+
+
+
 
 Adapter and DBName (safer): <%= ActiveRecord::Base.configurations.configs_for(env_name: Rails.env ).first.adapter %> //
   <b><%= ActiveRecord::Base.configurations.configs_for(env_name: Rails.env ).first.database %></b>
