--- a/app/views/pages/stats.html.erb
+++ b/app/views/pages/stats.html.erb
@@ -9,9 +9,17 @@
 
 <img src="https://raw.githubusercontent.com/palladius/gcp-cache/main/app/assets/images/PalladiusPacans_a_very_intertwined_network_of_pizza_slices_fold_014a6801-a8d0-4122-a8f9-4aa778cb089c.png" style="float:right;width:300px;height:300px;" />
 
+<h2>👁️ Vision</h2>
+
+The idea of GCP Cache is to:
+
+1. auto parse Asset Inventory outputs in convenient JSON. You gcloud stuff, we parse the JSOn for you :)
+2. have Services that glue things together (manually).
+3. Some day, write an article to auto-build a relationship thing, for example: you have a LAMP stack with a GCE VM, a DB, a GCLB and a Cloud DNS, and we find everything automatically from label: ricc-service:my-lamp-stack
+
 <h2>📈 Some Stats</h2>
 
-Un po' di notule
+<h3>Notes</h3>
 
 * I need to learn how to attach important generic info to an asset (folder / org/ project).
  `gcloud organizations get-iam-policy 426276118631 --format json ``
