--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,39 @@
-Not used. See `Stats` instead.
+For more stats, see `Stats`
+
+<h1>🏠 Welcome to <%= APP_NAME_SHORT %></h1>
+
+ <div class="p-5 text-center bg-light">
+    <h1 class="mb-3"><%= APP_NAME %></h1>
+    <h4 class="mb-3"><%= APP_DESCRIPTION %></h4>
+    <a class="btn btn-primary" href="<%= CODE_URL %>" role="button">Get the Code on 🐙</a>
+    <a class="btn btn-secondary" href="/pages/stats" role="button">See More stats</a>
+  </div>
+
+<img src="https://raw.githubusercontent.com/palladius/gcp-cache/main/app/assets/images/PalladiusPacans_a_very_intertwined_network_of_pizza_slices_fold_014a6801-a8d0-4122-a8f9-4aa778cb089c.png" style="float:right;width:300px;height:300px;" />
+
+<h2>👁️ Vision</h2>
+
+The idea of GCP Cache is to:
+
+1. auto parse Asset Inventory outputs in convenient JSON. You gcloud stuff, we parse the JSOn for you :)
+2. have Services that glue things together (manually).
+3. Some day, write an article to auto-build a relationship thing, for example: you have a LAMP stack with a GCE VM, a DB, a GCLB and a Cloud DNS, and we find everything automatically from label: ricc-service:my-lamp-stack
+
+
+<h1>䷬ How are data gathered?</h1>
+
+This software works in two parts:
+
+1. There are (slow) scripts to dump JSONs in local folders based on "gcloud .. --format json" outputs.
+2. rake db:seed parses them "correctly".
+
+/Users/ricc/git/gcp-cache/bin/populate-asset-inventory-from-gcloud-for-project-number.sh
+
+<h2>Asset DB</h2>
+
+<p>
+    <a href='https://cloud.google.com/asset-inventory/docs/listing-assets'>Listing assets with gcloud</a>
+</p>
+<p>
+    1. Create with gcloud: `bin/`
+</p>
