--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,10 +35,10 @@
             <a class="nav-link" href="/labels">🏷️️ Labels</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/inventory_items">🧽 Inv Items</a>
+            <a class="nav-link" href="/inventory_items"><%=INVENTORY_ITEM_ICON%> Inv Items</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/services">🔺 Services</a>
+            <a class="nav-link" href="/services"><%= Service.emoji %> Services</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/billing_accounts">🤑 BAIDs</a>
