--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -35,5 +35,5 @@ This software works in two parts:
     <a href='https://cloud.google.com/asset-inventory/docs/listing-assets'>Listing assets with gcloud</a>
 </p>
 <p>
-    1. Create with gcloud: `bin/`
+    1. Create with gcloud: `bin/populate-asset-inventory-from-gcloud-for-project-number.sh`
 </p>
